// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Header EC renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--ec"
  >
    <!-- navbar_settings -->
    <nav
      class="navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="/example.html"
        >
          <img
            alt="european commission logo"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/ec/images/logo/logo-ec--en.svg"
          />
        </a>
        <button
          aria-controls="topNavbarDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#topNavbarDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="topNavbarDropdown"
        />
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project"
    >
      <div
        class="container"
      >
        <a
          class="d-inline-block"
          href="/example.html"
        >
          <img
            alt="project logo"
            class="d-none d-lg-inline-block"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
          />
          <span
            class="bcl-header__site-name"
          >
            Project name
          </span>
        </a>
      </div>
    </div>
    <!-- navbar -->
    <nav
      class="navbar navbar-expand-lg navbar-dark"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        />
      </div>
    </nav>
    <!-- breadcrumbs -->
    <div
      class="container"
    >
      <nav
        aria-label="breadcrumb"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item d-none d-md-block"
          />
          <li
            class="breadcrumb-item d-none d-md-block"
          />
          <li
            class="breadcrumb-item"
          />
          <li
            aria-current="page"
            class="breadcrumb-item d-none d-md-block active"
          >
            News
          </li>
        </ol>
      </nav>
    </div>
  </header>
  <div
    aria-hidden="true"
    aria-label="loginModalLabel"
    class="modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Header EU renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--eu"
  >
    <!-- navbar_settings -->
    <nav
      class="navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="/example.html"
        >
          <img
            alt="desktop project logo"
            class="d-none d-lg-block"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/standard-version/positive/logo-eu--en.svg"
          />
          <img
            alt="mobile project logo"
            class="d-lg-none"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/condensed-version/positive/logo-eu--en.svg"
          />
        </a>
        <button
          aria-controls="topNavbarDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#topNavbarDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="topNavbarDropdown"
        />
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project"
    >
      <div
        class="container"
      >
        <img
          alt="project logo"
          class="d-none d-lg-inline-block"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
        />
        <span
          class="bcl-header__site-name"
        >
          Project name
        </span>
      </div>
    </div>
    <!-- navbar -->
    <nav
      class="navbar navbar-expand-lg navbar-dark"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        />
      </div>
    </nav>
    <!-- breadcrumbs -->
    <div
      class="container"
    >
      <nav
        aria-label="breadcrumb"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item d-none d-md-block"
          />
          <li
            class="breadcrumb-item d-none d-md-block"
          />
          <li
            class="breadcrumb-item"
          />
          <li
            aria-current="page"
            class="breadcrumb-item d-none d-md-block active"
          >
            News
          </li>
        </ol>
      </nav>
    </div>
  </header>
  <div
    aria-hidden="true"
    aria-label="loginModalLabel"
    class="modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Header Neutral renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--neutral"
  >
    <!-- navbar_settings -->
    <nav
      class="navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="/example.html"
        >
          <img
            alt="project logo"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
          />
          <div
            class="h5 ms-4-5 d-none d-lg-inline-block"
          >
            Project name
          </div>
        </a>
        <button
          aria-controls="topNavbarDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#topNavbarDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="topNavbarDropdown"
        />
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project"
    >
      <div
        class="container"
      >
        <span
          class="bcl-header__site-name h5 d-inline-block d-lg-none"
        >
          Project name
        </span>
      </div>
    </div>
    <!-- navbar -->
    <nav
      class="navbar navbar-expand-lg navbar-dark"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        />
      </div>
    </nav>
    <!-- breadcrumbs -->
    <div
      class="container"
    >
      <nav
        aria-label="breadcrumb"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item d-none d-md-block"
          />
          <li
            class="breadcrumb-item d-none d-md-block"
          />
          <li
            class="breadcrumb-item"
          />
          <li
            aria-current="page"
            class="breadcrumb-item d-none d-md-block active"
          >
            News
          </li>
        </ol>
      </nav>
    </div>
  </header>
  <div
    aria-hidden="true"
    aria-label="loginModalLabel"
    class="modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Header UCPKN renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--ucpkn"
  >
    <!-- navbar_settings -->
    <nav
      class="navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href=""
        >
          <img
            alt="desktop european union logo"
            class="d-none d-lg-block"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/standard-version/positive/logo-eu--en.svg"
          />
          <img
            alt="mobile european union logo"
            class="d-lg-none"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/condensed-version/positive/logo-eu--en.svg"
          />
        </a>
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project light"
    >
      <div
        class="container"
      >
        <img
          alt="ucpkn logo"
          class="d-none d-lg-inline-block"
          src="ucpkn_logo.svg"
        />
        <span
          class="bcl-header__site-name"
        >
          UCP Knowledge Network: Applied knowledge for action
        </span>
      </div>
    </div>
    <!-- navbar -->
    <nav
      class="navbar navbar-expand-lg navbar-dark"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        />
      </div>
    </nav>
    <!-- breadcrumbs -->
  </header>
</jest>
`;
